--- a/html/index.html
+++ b/html/index.html
@@ -1,2 +1,6 @@
 <html>
- <head><title>Web Server</title><
+    <head><title>Web Server</title></head>
+    <body>
+        <H1>Web Server Page~!!</H1>
+    </body>    
+</html>
